[project]
name = "datanaut"
version = "1.0.0"
description = "Data exploration shouldn't require a PhD - just curiosity and Datanaut!"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
]
